--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
+    "lib-flexible": "^0.3.2",
+    "moment": "^2.29.1",
+    "postcss-pxtorem": "5.1.1",
+    "vant": "^3.2.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -22,11 +28,17 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
+    "compression-webpack-plugin": "^9.0.0",
+    "echarts": "^5.2.1",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "prettier": "^2.2.1"
+    "mockjs": "^1.1.0",
+    "prettier": "^2.2.1",
+    "style-resources-loader": "^1.4.1",
+    "vconsole": "^3.9.1"
   }
 }
