--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -29,16 +29,18 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
-    "compression-webpack-plugin": "^9.0.0",
+    "compression-webpack-plugin": "5.0.1",
     "echarts": "^5.2.1",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "image-webpack-loader": "^8.0.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "mockjs": "^1.1.0",
     "prettier": "^2.2.1",
     "style-resources-loader": "^1.4.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vconsole": "^3.9.1"
   }
 }
