--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-  "name": "vue3-mobile-template",
-  "version": "0.1.0",
+  "name": "{{projectName}}",
+  "version": "{{version}}",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:dev": "vue-cli-service build --mode dev",
+    "build:uat": "vue-cli-service build --mode uat",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.23.0",
-    "core-js": "^3.6.5",
+    "axios": "^0.27.2",
+    "core-js": "^3.8.3",
+    "echarts": "^5.3.3",
     "js-cookie": "^3.0.1",
     "lib-flexible": "^0.3.2",
-    "moment": "^2.29.1",
-    "postcss-pxtorem": "5.1.1",
-    "vant": "^3.2.5",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "moment": "^2.29.3",
+    "postcss-pxtorem": "^6.0.0",
+    "vant": "^3.5.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-import": "^1.13.3",
-    "compression-webpack-plugin": "5.0.1",
-    "echarts": "^5.2.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
-    "image-webpack-loader": "^8.0.1",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "less": "^4.0.0",
+    "less-loader": "^8.0.0",
     "mockjs": "^1.1.0",
-    "prettier": "^2.2.1",
-    "style-resources-loader": "^1.4.1",
+    "prettier": "^2.4.1",
+    "style-resources-loader": "^1.5.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "unplugin-vue-components": "^0.20.1",
     "vconsole": "^3.9.1"
   }
 }
